[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/alert.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/gill-sans.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/square.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1080 ), Vector2( 0, 1080 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("bkg1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/CenterContainer/VBoxContainer/message:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("bkg1:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1080 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 50
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_filter = true
font_data = ExtResource( 5 )

[node name="alert" type="CanvasLayer"]
layer = 128
script = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/show = SubResource( 1 )

[node name="bkg1" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1080.0
margin_bottom = 1080.0
color = Color( 0.27451, 0.27451, 0.27451, 1 )

[node name="Node2D" type="Control" parent="."]
visible = false
anchor_bottom = 1.0
margin_top = 1080.0
margin_right = 720.0
margin_bottom = 1080.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.10352e-05
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/CenterContainer"]
margin_left = 59.0
margin_top = 180.0
margin_right = 659.0
margin_bottom = 1100.0
custom_constants/separation = 100

[node name="Control" type="Control" parent="Node2D/CenterContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="message" type="Label" parent="Node2D/CenterContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 600.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 300 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Mensagem de alerta..."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="Node2D/CenterContainer/VBoxContainer"]
margin_top = 600.0
margin_right = 600.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/CenterContainer/VBoxContainer"]
margin_top = 800.0
margin_right = 600.0
margin_bottom = 920.0
custom_constants/separation = 0
alignment = 1

[node name="btnCancel" type="Control" parent="Node2D/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 120.0
rect_min_size = Vector2( 300, 120 )
rect_clip_content = true

[node name="touch" type="TouchScreenButton" parent="Node2D/CenterContainer/VBoxContainer/HBoxContainer/btnCancel"]
self_modulate = Color( 0.521569, 0.0627451, 0.105882, 1 )
scale = Vector2( 30.3098, 12.5876 )
normal = ExtResource( 6 )

[node name="label" type="Label" parent="Node2D/CenterContainer/VBoxContainer/HBoxContainer/btnCancel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.964706, 0.960784, 0.960784, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Cancelar"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnConfirm" type="Control" parent="Node2D/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 300.0
margin_right = 600.0
margin_bottom = 120.0
rect_min_size = Vector2( 300, 120 )
rect_clip_content = true

[node name="touch" type="TouchScreenButton" parent="Node2D/CenterContainer/VBoxContainer/HBoxContainer/btnConfirm"]
self_modulate = Color( 0.286275, 0.529412, 0.117647, 1 )
scale = Vector2( 30.3098, 12.5876 )
normal = ExtResource( 6 )

[node name="label" type="Label" parent="Node2D/CenterContainer/VBoxContainer/HBoxContainer/btnConfirm"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.964706, 0.960784, 0.960784, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Confirmar"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Node2D/CenterContainer/VBoxContainer/HBoxContainer/btnCancel/touch" to="." method="_on_touchCancel_pressed"]
[connection signal="pressed" from="Node2D/CenterContainer/VBoxContainer/HBoxContainer/btnConfirm/touch" to="." method="_on_touchConfirm_pressed"]
